@@ -19,11 +19,13 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+#include <config.h>
 #include <stdio.h>
 #include <string.h>
 #include <stdlib.h>
-#include <config.h>
 #include "xsize.h"
+
+/* libzenc includes */
 #include "bzenchar.h"
 
 int main (int argc, char *argv[])
