@@ -1,3 +1,9 @@
+2017-02-03  Karl Kuhrman  <kkuhrman@pelican>
+
+	* configure.ac: advanced version number to 0.1.1
+	* src/bzensock.c: unit tested code for dynamic allocation of sockaddr_un
+	* src/bzenmem.c: added bzen_realloc()
+
 2017-02-01  Karl Kuhrman  <kkuhrman@barzensuit.org>
 
 	* configure.ac Version 0.1.0 support for libtool, Gnu Lib and unit tests
